[package]
name = "unm-sfx"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "unm_sfx"
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.101"
symphonia = { version = "0.5.5", features = ["mp3", "aac", "ogg", "flac", "wav"] }
ringbuf = "0.4.8"

[target.'cfg(not(target_os = "android"))'.dependencies]
cpal = "0.17.1"

[target.'cfg(target_os = "android")'.dependencies]
oboe = "0.6.1"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true